# 4d-cbct-mc

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Koeffizienten_WPC  README.md  TODO.txt  build_docker.sh  commands.txt  createData.py  create_4d_cirs.py  fit_corr_model.py  main.py  main_mc_sim.py  materials.py  optimizer_1x1x1_pat_90deg.pkl  plotting.py  pyproject.toml  requirements.dev.txt  requirements.txt  ruff.toml  run_mc_simulations_test.py  setup.py  tags_porjection_data.ods  waterPrecorrection.py
cbctmc/: common_types.py  createData.py  createData_2x_speedup.py  defaults.py  docker.py  forward_projection.py  logger.py  main.py  materials.py  metrics.py  peaks.py  plotting.py  projection.py  segmentation.py  shell.py  utils.py
docker/: compile.sh
ipmi/: constants.py  defaults.py  fused_types.py
mcgpu/: MC-GPU_v1.3.cu  MC-GPU_v1.3.h  MC-GPU_v1.3.in  compile.sh  make_MC-GPU_v1.3_with_newer_cuda.sh
scripts/: benchmark_vox.py  brute_force_test_geometry.py  brute_force_test_geometry_fp.py  build_correspondence_model_cirs.py  build_correspondence_model_patient.py  calculate_dvf_mc.py  check_matching_fp.py  compile_segmentation_dataset.py  create_cirs_phantom_3d.py  create_cirs_phantom_4d.py  create_segmentations.py  create_speedup_dataset.py  dataset_statistics.py  estimate_projection_variance.py  eval_speedup.py  eval_speedup_catphan.py  eval_speedup_mtf.py  eval_speedup_single_case.py  fit_noise.py  fit_noise_on_projection.py  fit_wpc.py  fit_wpc_catphan.py  fix_air_normalization.py  fix_image_orientation.py  generate_publication_images.py  (+22 more)
(+215 files in other folders)
