[project]
name = "cbctmc"
version = "0.1.0"
description = "3D and 4D Monte Carlo simulations for cone-beam CT imaging"
readme = "README.md"
authors = [
    { name = "Frederic Madesta", email = "f.madesta@uke.de" }
]
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.11",
    "docker>=7.1.0",
    "itk-rtk>=2.6.0",
    "itk>=5.4.0",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pillow>=11.0.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "simpleitk>=2.4.0",
    "tables>=3.10.1",
    "torch>=2.5.1",
    "tqdm>=4.67.0",
    "typer>=0.13.0",
    "xraydb>=4.5.4",
]

[project.scripts]
run-mc = "cbctmc.cli.run_mc_simulations:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.7.4",
]
